rendered/envs/friclu/n8n/deployment-n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n
    app.kubernetes.io/version: 1.112.0
    helm.sh/chart: n8n-1.0.15
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
      app.kubernetes.io/type: master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: 5912bdb35439cd74227ad075cb946dcab54c3e1dea093f709970746a51279941
      labels:
        app.kubernetes.io/instance: n8n
        app.kubernetes.io/name: n8n
        app.kubernetes.io/type: master
    spec:
      containers:
        - env: []
          image: n8nio/n8n:1.112.0
          imagePullPolicy: IfNotPresent
          lifecycle: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          name: n8n
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: data
            - mountPath: /syncthing
              name: syncthing
      nodeSelector:
        kubernetes.io/hostname: friclu-1
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: n8n
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n
        - name: syncthing
          persistentVolumeClaim:
            claimName: syncthing
