rendered/envs/friclu/n8n/service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: n8n
    app.kubernetes.io/version: 1.112.0
    helm.sh/chart: n8n-1.0.15
  name: n8n
  namespace: n8n
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
    app.kubernetes.io/type: master
  type: ClusterIP
